# regenie

./: CMakeLists.txt
binary/: regenie-3.6-h6578b86_0.tar.bz2
external_libs/mvtnorm/: Makefile  mvtnorm.cpp
external_libs/pgenlib/: Makefile
external_libs/qf/: Makefile
external_libs/quadpack/: Makefile
external_libs/remeta/: Makefile
src/: NNLS.cpp  NNLS.hpp
